# xynmacro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  announcements.json
.github/: dependabot.yml
.github/scripts/: verify_updater_keypair.py
.github/workflows/: release.yml
bot/: .gitignore  README.md  package-lock.json  package.json
bot/python/: requirements.txt  xmacro_core.py  xynmacro_core.py
bot/python/defaults/: button_calibration.json  region_calibration.json
bot/python/tests/: test_auto_retry.py  test_calibration_cancel.py  test_coordinate_transforms.py  test_display_confirm.py  test_display_resolution.py  test_factory_reset.py  test_fullscreen_restore.py  test_gravity_control.py  test_loopback_auth.py  test_power_lifecycle.py  test_progression_detection.py  test_senzu_control_flow.py  test_senzu_empty_gravity.py  test_senzu_hp_detection.py  test_senzu_preferences_cache.py  test_session_logs.py  test_settings_contract.py  test_shutdown_policy.py  test_start_guard.py  test_version_propagation.py
bot/scripts/: build_sidecar.ps1  changelog.mjs  check_close_cleanup.ps1  make_icon.py
bot/src/: frontend-contract.test.mjs  index.html  main.js  preference-migration.js  preference-migration.test.mjs  screen-state.js  screen-state.test.mjs  styles.css  update-state.js  update-state.test.mjs
bot/src-tauri/: Cargo.toml  tauri.conf.json
bot/src-tauri/icons/: icon.icns
bot/src-tauri/resources/licenses/: OFL-1.1.txt  THIRD-PARTY-NOTICES.txt
bot/src-tauri/src/: lib.rs  main.rs
bot/src/assets/: fonts.css
